add task *  start

--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <title>Document</title>
     <script src="assets/js/index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Gender</h1>
+      <img
+        src="/assets/js/img/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-vector-illustration_561158-3383.avif"
+        alt=""
+      />
+      <p>
+        <button>Login</button>
+        <button>Name</button>
+      </p>
+    </header>
+  </body>
 </html>
