--- a/index.html
+++ b/index.html
@@ -5,17 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <script src="assets/js/index.js"></script>
+    <style>
+      .image {
+       width:150px;
+       height:150px;
+       object-fit: cover;
+       border-radius: 50%;
+       border: 2px solid rgb(192, 43, 43);
+      }
+      .btn {
+        display: flex;
+        gap: 50px;
+      }
+    </style>
   </head>
   <body>
     <header>
-      <h1>Gender</h1>
+        <h1>Gender</h1>
       <img
+        class="image"
         src="/assets/js/img/default-avatar-profile-icon-social-media-user-image-gray-avatar-icon-blank-profile-silhouette-vector-illustration_561158-3383.avif"
-        alt=""
+        alt="gender"
       />
-      <p>
-        <button>Login</button>
-        <button>Name</button>
+     <p>
+        <div class="btn">
+          <button>Login</button>
+          <button>Register</button>
+       </div>
       </p>
     </header>
   </body>
